# modelab

./: .cursorrules  .gitattributes  .gitignore  README.md
.cursor/rules/: language.mdc
.github/workflows/: docs.yml
app/core/: config.py
app/models/: schemas.py
app/routers/: users.py
client/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client-old/: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
client-old/src/components/common/: ErrorDisplay.tsx  JsonDisplay.tsx
client-old/src/components/ui/: card.tsx
client-old/src/layout/: Header.tsx
client-old/src/lib/tanstackQuery/: queryUtils.ts
client-old/src/routes/: __root.tsx  index.tsx
client/src/: App.tsx  api.ts  index.css  main.tsx  routeTree.gen.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: Chart.tsx  ComputerVisualization.tsx  EngineEndpoints.tsx  Header.tsx  ItemsEndpoints.tsx  MixerVisualization.tsx  ParametersPanel.tsx  PumpVisualization.tsx  RootEndpoints.tsx  Sidebar.tsx  UsersEndpoints.tsx
client/src/components/common/: ErrorDisplay.tsx  JsonDisplay.tsx  StatusBadge.tsx  StatusCard.tsx
client/src/components/forms/: AddForm.tsx  FactorialForm.tsx  MultiplyForm.tsx  ProcessStringForm.tsx  SumArrayForm.tsx
client/src/components/ui/: badge.tsx  button.tsx  card.tsx  sonner.tsx
client/src/hooks/: useEngine.ts  useItems.ts  useModifiedMutation.tsx  useModifiedQuery.tsx  useRoot.ts  useThrottledIsFetching.tsx  useUsers.ts
client/src/layout/: Sidebar.tsx
client/src/lib/: queryClient.ts  queryUtils.ts
client/src/lib/tanstackPacer/: useThrottledIsFetching.tsx
client/src/lib/tanstackQuery/: queryClient.ts  useModifiedMutation.tsx  useModifiedQuery.tsx
client/src/routes/: __root.tsx  engine.tsx  index.tsx  items.tsx  root.tsx  users.tsx
client/src/service/: config.ts  engine.ts  index.ts  items.ts  root.ts  users.ts
client/src/types/: index.ts  service.ts
docs/: README.md  examples.md  index.md  mkdocs.yml  requirements.txt  serve_docs.bat  serve_docs.sh
docs/development/: contributing.md  structure.md
docs/engine/: api.md  compilation.md  functions.md  index.md
docs/introduction/: architecture.md  overview.md  quickstart.md
docs/server/: api.md  configuration.md  index.md  installation.md
engine/: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build.sh  engine.cpp  engine.h  hot_reload.bat  hot_reload.py
server/: README.md  main.py  modelab.db  requirements.txt
server/app/: admin.py  engine_wrapper.py
server/app/core/: config.py  database.py
server/app/models/: database.py  schemas.py
server/app/routers/: engine.py  items.py  users.py
(+48 files in other folders)
